// Vitest Snapshot v1

exports[`Snapshot test 1`] = `
<div>
  hi
</div>
`;

exports[`rendering > basic form rendering 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="grid grid-cols-[fit-content(200px)_1fr] gap-x-4 gap-y-8 p-4 flex-1 "
  >
    <span
      className="text-right inline-flex flex-col"
    >
      <span
        className="leading-tight font-bold"
      >
        userId
      </span>
      <span
        className="text-slate-400 text-sm"
      >
        int32
      </span>
    </span>
    <div
      className="form-control w-full"
    >
      <input
        className="input input-bordered input-sm flex-1 "
        name="userId"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="int32"
        step="any"
        type="number"
      />
    </div>
    <span
      className="text-right inline-flex flex-col"
    >
      <span
        className="leading-tight font-bold"
      >
        name
      </span>
      <span
        className="text-slate-400 text-sm"
      >
        string
      </span>
    </span>
    <div
      className="form-control w-full"
    >
      <input
        className="input input-bordered input-sm flex-1 "
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="string"
        step="any"
        type="text"
      />
    </div>
    <span
      className="text-right inline-flex flex-col"
    >
      <span
        className="leading-tight font-bold"
      >
        friends
      </span>
      <span
        className="text-slate-400 text-sm"
      >
        int32
      </span>
    </span>
    <div>
      <button
        className="btn btn-xs"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="h-6 w-6"
          fill="none"
          stroke="currentColor"
          strokeWidth={2}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 6v6m0 0v6m0-6h6m-6 0H6"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
        Add
      </button>
    </div>
  </div>
</form>
`;

exports[`rendering > field name override 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="grid grid-cols-[fit-content(200px)_1fr] gap-x-4 gap-y-8 p-4 flex-1 "
  >
    <span
      className="text-right inline-flex flex-col"
    >
      <span
        className="leading-tight font-bold"
      >
        userId
      </span>
      <span
        className="text-slate-400 text-sm"
      >
        int32
      </span>
    </span>
    <div
      className="form-control w-full"
    >
      <input
        className="input input-bordered input-sm flex-1 "
        name="userId"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="int32"
        step="any"
        type="number"
      />
    </div>
    <span
      className="text-right inline-flex flex-col"
    >
      <span
        className="leading-tight font-bold"
      >
        User Name
      </span>
      <span
        className="text-slate-400 text-sm"
      >
        string
      </span>
    </span>
    <div
      className="form-control w-full"
    >
      <input
        className="input input-bordered input-sm flex-1 "
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="string"
        step="any"
        type="text"
      />
    </div>
    <span
      className="text-right inline-flex flex-col"
    >
      <span
        className="leading-tight font-bold"
      >
        friends
      </span>
      <span
        className="text-slate-400 text-sm"
      >
        int32
      </span>
    </span>
    <div>
      <button
        className="btn btn-xs"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="h-6 w-6"
          fill="none"
          stroke="currentColor"
          strokeWidth={2}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 6v6m0 0v6m0-6h6m-6 0H6"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
        Add
      </button>
    </div>
  </div>
</form>
`;
